--- a/index1.html
+++ b/index1.html
@@ -22,8 +22,14 @@
 	
 	<main>
 		<div class="hero-box">
-			
+			<h1>roarX. Pre-order now.</h1>
 		</div>
+		<div class="col"><img src="images/image1.jpg" alt=""></div>
+		<div class="col"><img src="images/image2.jpg" alt=""></div>
+		<div class="col"><img src="images/image3.jpg" alt=""></div>
+		<div class="col"><img src="images/image4.jpg" alt=""></div>
+		<div class="col"><img src="images/image5.jpg" alt=""></div>
+		<div class="col"><img src="images/image6.jpg" alt=""></div>
 	</main>
 	
 	
